kubernetes/nodejs-app.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: node-pod
  name: node-pod
  namespace: squidgame
  annotations:
        linkerd.io/inject: enabled
spec:
  containers:
  - name: react-app
    image: efraalv/frontend-sg
    ports:
    - containerPort: 80
  - name: nodejs-app
    image: efraalv/backend-sg
    ports:
    - containerPort: 3500
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: node-pod
  name: node-pod
  namespace: squidgame
spec:
  ports:
  - port: 3500
    protocol: TCP
    targetPort: 3500
  selector:
    app: node-pod
  type: LoadBalancer
