kubernetes/react-app.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: react-pod
  name: react-pod
  namespace: squidgame
  annotations:
        linkerd.io/inject: enabled
spec:
  containers:
  - name: react-app
    image: efraalv/frontend-sg
    ports:
    - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: react-pod
  name: react-pod
  namespace: squidgame
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: react-pod
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp-ingress-2
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/service-upstream: "true"
    nginx.ingress.kubernetes.io/websocket-services: "node-pod"
  namespace: squidgame
spec:
  rules:
  - host: myapp.34.68.145.104.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: react-pod
            port:
              number: 80
