kubernetes/squidgame.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: squidgame
spec: {}
status: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: grpc-deployment-pubsub
  name: grpc-deployment-pubsub
  namespace: squidgame
spec:
  replicas: 3
  selector:
    matchLabels:
      app: grpc-deployment-pubsub
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: grpc-deployment-pubsub
      annotations:
        linkerd.io/inject: enabled
    spec:
      hostname: server
      containers:
      - name: grpc-game-server
        image: cascarus/grpc-game-server
        ports:
          - containerPort: 50051
      - name: grpc-game-client
        image: cascarus/grpc-game-client
        ports:
          - containerPort: 2000
status: {}
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: grpc-deployment-pubsub
  name: grpc-deployment-pubsub
  namespace: squidgame
spec:
  ports:
  - port: 2000
    protocol: TCP
    targetPort: 2000
  selector:
    app: grpc-deployment-pubsub
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: grpc-deployment-rabbit
  name: grpc-deployment-rabbit
  namespace: squidgame
spec:
  replicas: 3
  selector:
    matchLabels:
      app: grpc-deployment-rabbit
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: grpc-deployment-rabbit
      annotations:
        linkerd.io/inject: enabled
    spec:
      hostname: server
      containers:
      - name: grpc-game-server
        image: cascarus/grpc-game-server
        ports:
          - containerPort: 50051
      - name: grpc-game-client
        image: cascarus/grpc-game-client
        ports:
          - containerPort: 2000
status: {}
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: grpc-deployment-rabbit
  name: grpc-deployment-rabbit
  namespace: squidgame
spec:
  ports:
  - port: 2000
    protocol: TCP
    targetPort: 2000
  selector:
    app: grpc-deployment-rabbit
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: grpc-deployment-kafka
  name: grpc-deployment-kafka
  namespace: squidgame
spec:
  replicas: 3
  selector:
    matchLabels:
      app: grpc-deployment-kafka
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: grpc-deployment-kafka
      annotations:
        linkerd.io/inject: enabled
    spec:
      hostname: server
      containers:
      - name: grpc-game-server
        image: cascarus/grpc-game-server
        ports:
          - containerPort: 50051
      - name: grpc-game-client
        image: cascarus/grpc-game-client
        ports:
          - containerPort: 2000
status: {}
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: grpc-deployment-kafka
  name: grpc-deployment-kafka
  namespace: squidgame
spec:
  ports:
  - port: 2000
    protocol: TCP
    targetPort: 2000
  selector:
    app: grpc-deployment-kafka
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/service-upstream: "true"
  namespace: squidgame
spec:
  rules:
  - host: 34.68.145.104.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grpc-deployment-pubsub
            port:
              number: 2000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grpc-deployment-rabbit
            port:
              number: 2000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grpc-deployment-kafka
            port:
              number: 2000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-deployment
            port:
              number: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: error-injector
  namespace: squidgame
  labels:
    app: error-injector
spec:
  selector:
    matchLabels:
      app: error-injector
  replicas: 1
  template:
    metadata:
      labels:
        app: error-injector
      annotations:
        linkerd.io/inject: enabled
    spec:
      containers:
        - name: nginx
          image: nginx:alpine
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
      volumes:
        - name: nginx-config
          configMap:
            name: error-injector
---
apiVersion: v1
kind: Service
metadata:
  name: error-injector
  namespace: squidgame
spec:
  ports:
  - name: service
    port: 2000
  selector:
    app: error-injector
